brat/test/golden/error/bad_underscore2.brat.golden
Error in test/golden/error/bad_underscore2.brat on line 2:
uscore(i) = _
            ^

  Parse error unexpected _

